--- a/Jasmine/JasmineNode/package.json
+++ b/Jasmine/JasmineNode/package.json
@@ -4,7 +4,7 @@
   "description": "Jasmine node demo",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "node jasmine-runner.js"
   },
   "author": "Zhe",
   "license": "ISC",
